# ChangeLog for app-text/hyperestraier
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/hyperestraier/ChangeLog,v 1.46 2007/11/17 20:53:28 wltjr Exp $

  17 Nov 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  -hyperestraier-1.4.0-r1.ebuild, -hyperestraier-1.4.9.ebuild,
  hyperestraier-1.4.10-r1.ebuild:
  amd64 stable, bug #196867.Removed past versions in same slot.

  06 Nov 2007; Raúl Porcel <armin76@gentoo.org>
  hyperestraier-1.4.10-r1.ebuild:
  sparc stable wrt #196867

  24 Oct 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  hyperestraier-1.4.10-r1.ebuild:
  Stable on ppc, bug #196867.

  13 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  hyperestraier-1.4.9.ebuild:
  ppc. stable

  09 Aug 2007; Akinori Hattori <hattya@gentoo.org>
  hyperestraier-1.4.10-r1.ebuild:
  stable on x86.

  08 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  hyperestraier-1.4.9.ebuild:
  Stable on sparc

*hyperestraier-1.4.10-r1 (28 Apr 2007)

  28 Apr 2007; Akinori Hattori <hattya@gentoo.org>
  -hyperestraier-1.4.10.ebuild, +hyperestraier-1.4.10-r1.ebuild:
  fixes bug #176181.

*hyperestraier-1.4.10 (12 Mar 2007)

  12 Mar 2007; Akinori Hattori <hattya@gentoo.org>
  +hyperestraier-1.4.10.ebuild:
  new upstream release.

  12 Mar 2007; Akinori Hattori <hattya@gentoo.org>
  -hyperestraier-1.4.7.ebuild, -hyperestraier-1.4.8.ebuild,
  hyperestraier-1.4.9.ebuild:
  stable on x86.

  01 Dec 2006; Akinori Hattori <hattya@gentoo.org>
  -hyperestraier-1.4.0-r2.ebuild, hyperestraier-1.4.7.ebuild:
  stable on x86.

*hyperestraier-1.4.9 (01 Dec 2006)

  01 Dec 2006; Akinori Hattori <hattya@gentoo.org>
  +hyperestraier-1.4.9.ebuild:
  new upstream release.

*hyperestraier-1.4.8 (10 Nov 2006)

  10 Nov 2006; Akinori Hattori <hattya@gentoo.org>
  +hyperestraier-1.4.8.ebuild:
  new upstream release.

*hyperestraier-1.4.7 (30 Oct 2006)

  30 Oct 2006; Akinori Hattori <hattya@gentoo.org>
  +hyperestraier-1.4.7.ebuild: