@@ -1,4 +1,6 @@
 DIST hyperestraier-1.4.10.tar.gz 1011767 RMD160 56022db14947c00e5f8c01834173ae3bc5daeab8 SHA1 d9e200cf237e46315df5a729bc00920e0debfc0d SHA256 9b64d3a3273b80494cba0511501a83f6d5c03e9268192e2ed09ac7c2c383d396
+DIST hyperestraier-1.4.13.tar.gz 1014600 RMD160 8af0af25df6d5bd45a09e9abfbb26300339b5a2c SHA1 21c3f325f42019fef096172105c2fc16f3e72fc0 SHA256 92f3e76d12da79e116e4e68487ffdddfc2abe5f50f509247905414daa5c38fff
 EBUILD hyperestraier-1.4.10-r1.ebuild 1785 RMD160 8366a1d4565e587d0a8524920c0cfc503e5b00a7 SHA1 fd8c037db5f376a2090ead8c16fb52575ae90db1 SHA256 5aec383014127dc5c9fba3c5d915f4d37a801e2f4724252a03d69416c5251bec
-MISC ChangeLog 6494 RMD160 36c1bca282832c9abcc7f6047ae81cd9a343d865 SHA1 cf40b479f5b62c1be6c63a183b25117b04dd6cb3 SHA256 f671dcb5590a9c09786d3c2b009da9dc0e8e8484f3d5ccfb32ffb3f0eb5b8f00
+EBUILD hyperestraier-1.4.13.ebuild 1787 RMD160 47898cc406ffe4f56133862afc5ece1fd8561eda SHA1 05abecd419749ddf5ba2d67c4f51f77aabfe7c65 SHA256 91d966054de87cc89b5490fee055c1afc8fa543acb8cbef14555c5fb562e0fbc
+MISC ChangeLog 6640 RMD160 bb1ad2efad66772827b0fe14135caceb3be3440e SHA1 bdd1bb0a17fea256d4901821a16cd7ffbb550104 SHA256 1a0b001dc604cbe84af1767a8a51eba53328150434f45a3ea508371aac841d16
 MISC metadata.xml 226 RMD160 19d90fb44483e26b860cda1cc3ad46e3e89b6909 SHA1 e4f7e5ee158178c28a23573fa822f83df9308375 SHA256 c16f962dbb1340e378c4775fd9fa31af8cac92ab8c524988a697af52dc803fdf
