@@ -1,6 +1,12 @@
 # ChangeLog for app-text/hyperestraier
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/hyperestraier/ChangeLog,v 1.46 2007/11/17 20:53:28 wltjr Exp $
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/hyperestraier/ChangeLog,v 1.47 2008/02/04 17:28:35 hattya Exp $
+
+*hyperestraier-1.4.13 (04 Feb 2008)
+
+  04 Feb 2008; Akinori Hattori <hattya@gentoo.org>
+  +hyperestraier-1.4.13.ebuild:
+  new upstream release.
 
   17 Nov 2007; William L. Thomson Jr. <wltjr@gentoo.org>
   -hyperestraier-1.4.0-r1.ebuild, -hyperestraier-1.4.9.ebuild,
